--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 body {
     font-family: "Merriweather", serif;
     margin: 0;
+    color: #020E35;
 }
 
 /* *******************Contact Us Style******************** */
@@ -33,25 +34,24 @@ body {
     margin: 0;
 }
 
-.form h2 {
+.form h2, .news-form h2 /* for newsletter style */{
     font-size: 54px;
     line-height: 72px;
     font-weight: 700;
-    width: 527px;
+    width: 560px;
     margin-top: 0;
     margin-bottom: 0;
     z-index: 2;
 }
 
-.underline-red {
-    width: 304px;
+.underline-red-form {
+    width: 290px;
     height: 27px;
     background: #FF5678;
     position: relative;
     top: -71px;
     right: -198px;
     z-index: 1
-
 }
 
 .name-card, .email-card{
@@ -93,11 +93,47 @@ form input {
     width: 205px;
 }
 
-.contact-us-image {
+.placeholder-image {
     background: #FFEEF6;
     padding: 4px 0 4px 4px;
     border-radius: 1000px;
     width: 776px;
     height: 662px;
     flex-shrink: 0;
+}
+
+/* ******************* Newsletter Style******************** */
+
+.newsletter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px 150px 100px 150px;
+}
+
+.news-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 656px;
+    height: 621px;
+}
+
+.news-form-sub {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 377px;
+    margin: 0;
+}
+
+.underline-red-news {
+    width: 408px;
+    height: 35px;
+    background: #FF5678;
+    position: relative;
+    top: -67px;
+    right: -144px;
+    z-index: 1
 }
