--- a/style.css
+++ b/style.css
@@ -492,3 +492,209 @@ div[class="craft-experience"] h2 {
     top: -73px;
     z-index: -1;
 }
+
+/* ******************* footer Style ******************** */
+
+.footer {
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 1920px;
+    height: 411px;
+}
+
+.footer-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 150px;
+    height: 269px;
+}
+
+.social-networks {
+    display: flex;
+    width: 410px;
+    justify-content: space-between;
+}
+
+.logo-footer {
+    width: 128px;
+    height: 42px;
+    object-fit: cover;
+}
+
+.address-title {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.num-telephone, .address-description {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 0;
+}
+
+.address {
+    display: flex;
+    width: 148px;
+    height: 112px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.where-to-find-us {
+    display: flex;
+    width: 410px;
+    height: 269px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.title-footer {
+    margin: 0;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 700;
+}
+
+.services {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 229px;
+    width: 194px;
+}
+
+.company {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 161px;
+    width: 154px;
+}
+
+.about-us {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 127px;
+    width: 110px;
+}
+
+.legal-stuff {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 127px;
+    width: 138px;
+}
+
+.services-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 194px;
+    height: 188px;
+}
+
+.company-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 154px;
+    height: 120px;
+}
+
+.about-us-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 110px;
+    height: 86px;
+}
+
+.legal-stuff-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 86px;
+    width: 138px;
+}
+
+.services-p, .company-p, .about-us-p, .legal-stuff-p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    margin: 0;
+}
+
+.terms {
+    background: #020E35;
+    color: #fff;
+    padding: 32px 150px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.copyright {
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 400;
+    width: 345px;
+    margin: 0;
+}
+
+.policy {
+    display: flex;
+    justify-content: space-between;
+    width: 250px;
+    height: 18px;
+}
+
+.policy-p {
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 400;
+    width: 93px;
+    margin: 0;
+}
+
+.policy-p-privacy {
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 400;
+    width: 97px;
+    margin: 0;
+}
+
+.underline-red-footer {
+    width: 605px;
+    height: 516px;
+    border-radius: 1000px;
+    padding: 4px 0 4px 4px;
+    background: #FFEEF6;
+    position: absolute;
+    z-index: -1;
+    top: 5800px;
+    left: -126px;
+}
+
+.underline-red-footer2 {
+    width: 605px;
+    height: 516px;
+    border-radius: 1000px;
+    padding: 4px 0 4px 4px;
+    background: #FFEEF6;
+}
+
+.container {
+    position: absolute;
+    top: 5800px;
+    left: 1420px;
+    width: 500px;
+    z-index: -1;
+    overflow: hidden;
+}
