--- a/style.css
+++ b/style.css
@@ -480,7 +480,7 @@ div[class="craft-experience"] h2 {
     position: absolute;
     flex-shrink: 0;
     z-index: -1;
-    top: 890px;
+    top: 890px; /* à replacer après hkasdkjhdsjkhasdhkjdjhksdakjhdsakhjdsahkjdsahkjdaskhjdsahjkdashjkdsahjksdajhkdsahjkadsjhkdashkjdsa */ 
     left: -210px;
 }
 
@@ -670,7 +670,7 @@ div[class="craft-experience"] h2 {
     margin: 0;
 }
 
-.underline-red-footer {
+.underline-red-footer { /* à replacer après kbuasfdhjbdfsgbjhkfjhbkbhfabjfbbjhkfbjhfdbhkjfadsbjhkfdasbhjkfdsabhjkfsdbhjk */
     width: 605px;
     height: 516px;
     border-radius: 1000px;
@@ -682,7 +682,7 @@ div[class="craft-experience"] h2 {
     left: -126px;
 }
 
-.underline-red-footer2 {
+.underline-red-footer2 { /* à replacer après kbuasfdhjbdfsgbjhkfjhbkbhfabjfbbjhkfbjhfdbhkjfadsbjhkfdasbhjkfdsabhjkfsdbhjk */
     width: 605px;
     height: 516px;
     border-radius: 1000px;
@@ -697,4 +697,72 @@ div[class="craft-experience"] h2 {
     width: 500px;
     z-index: -1;
     overflow: hidden;
+}
+
+/* ******************* home page header Style ******************** */
+
+.home-page {
+    display: flex;
+    justify-content: space-between;
+    height: 508px;
+    align-items: center;
+    padding: 300px 150px 200px 150px;
+}
+
+.home-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 457px;
+    width: 548px;
+}
+
+.home-title {
+    font-size: 76px;
+    line-height: 110px;
+    font-weight: 900;
+    width: 548px;
+    margin: 0;
+}
+
+.home-page-image {
+    padding: 4px 0 4px 4px;
+    border-radius: 200px;
+    width: 588px;
+    height: 500px;
+    flex-shrink: 0;
+    object-fit: cover;
+}
+
+span {
+    color: #fff;
+}
+
+.highlight-red {
+    width: 260px;
+    height: 70px;
+    background: #FF5678;
+    position: relative;
+    top: -203px;
+    right: -243px;
+    z-index: -1; 
+    margin: 0;
+    padding: 0;
+}
+
+.home-button {
+    padding: 24px 40px;
+    background: #020E35;
+    box-shadow: 0 20px 40px 5px #00000026;
+    width: 197px;
+    height: 71px;
+    color: #fff;
+    font-weight: 700;
+    border: none;
+    font-size: 18px;
+    line-height: 23px;
+}
+
+.headline {
+    height: 330px;
 }
