fix: fixed the comments on style.css and index.html

--- a/style.css
+++ b/style.css
@@ -670,7 +670,7 @@ div[class="craft-experience"] h2 {
     margin: 0;
 }
 
-.underline-red-footer { /* à replacer après kbuasfdhjbdfsgbjhkfjhbkbhfabjfbbjhkfbjhfdbhkjfadsbjhkfdasbhjkfdsabhjkfsdbhjk */
+.underline-red-footer { 
     width: 605px;
     height: 516px;
     border-radius: 1000px;
@@ -682,7 +682,7 @@ div[class="craft-experience"] h2 {
     left: -126px;
 }
 
-.underline-red-footer2 { /* à replacer après kbuasfdhjbdfsgbjhkfjhbkbhfabjfbbjhkfbjhfdbhkjfadsbjhkfdasbhjkfdsabhjkfsdbhjk */
+.underline-red-footer2 { 
     width: 605px;
     height: 516px;
     border-radius: 1000px;
